# tapium

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  USE_CASES.md  api.py  environments.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  tapium.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: agent_loop.md
tests/: conftest.py  test_actions.py  test_cli.py  test_pure_helpers.py
use-cases/: README.md
use-cases/instagram-story-watcher/: README.md  watch_follower_stories.py
use-cases/qa-exploratory/: README.md  bugs.md  exploratory_prompt.md  screens.md  test-cases.md  test_login_example.py
